--- a/package.json
+++ b/package.json
@@ -85,10 +85,10 @@
     "webpack-merge": "^4.2.2"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "@material-ui/core": "^4.9.14",
-    "@material-ui/icons": "^4.9.1"
+    "@material-ui/icons": "^4.9.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "dependencies": {
     "color": "^3.1.2",
